examples/fail/lexer/invalid_int_suffix.bina
// EXPECT_LEXER_ERROR: invalid numeric suffix
fn main() -> int {
    let x = 123i128;
    return 0;
}
